@@ -1,3 +1,4 @@
+Micro tab: Removed the exact volume readout from the solution
 Micro tab: Changed from "or" to "and" in saturation rules to handle mixed kits that share a solute constituent
 # 0.00.96 (55726) Aug 23, 2011
 Water tab: Improved collision dynamics particularly for periodic boundary conditions
